--- a/views/fileinput.ejs
+++ b/views/fileinput.ejs
@@ -7,12 +7,24 @@
     <title>File</title>
   </head>
   <body>
-    <div style="text-align: center; margin-top: 60px ">
-        <h3 style="color: blue;">Welcome</h3>
-      <form action="/api/file" method="post" style="display: flex; flex-direction: column; align-items: center; gap: 20px">
-        <label style="color: red;" for="text">Enter file the full file path to the csv file(Note: Replace all \(backward slash) with forward slash!!!)</label>
-        <input type="text" name="text" style="width: 400px; height: 30px;" />
-        <button style="width: 150px;" type="submit" name="submit">Submit</button>
+    <div style="text-align: center; margin-top: 60px">
+      <h3 style="color: blue">Welcome</h3>
+      <form
+        action="/api/file"
+        method="post"
+        style="
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          gap: 20px;
+        "
+      >
+        <label style="color: red" for="text"
+          >Enter file the full file path to the csv file(Note: Replace all
+          \(backward slash) with forward slash!!!)</label
+        >
+        <input type="text" name="text" style="width: 400px; height: 30px" />
+        <button style="width: 150px" type="submit" name="submit">Submit</button>
       </form>
     </div>
   </body>
